# Cogito

./: .coveragerc  .gitignore  AGENTS.md  ARCHITECTURE_RULES.md  CHANGELOG.md  CHECKLIST.md  IMPLEMENTATION_GAPS.md  README.md  config.json  config.yaml  enhancement_directory_input.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run_critique.py  run_critique_input.sh  run_research.py  setup.py  test_latex_peer_review.py  test_latex_simplified.py
docs/: ARCHITECTURE_DIAGRAMS.md  BACKEND_DETAILS_RESPONSE.md  BACKEND_ENHANCEMENT_REPORT.md  FRONTEND_ARCHITECTURE.md  FRONTEND_ARCHITECTURE_SUMMARY.md  IMPLEMENTATION_GUIDE.md  Quickstart.md  README_FRONTEND_ARCHITECTURE.md  configuration.md  critique_module_design.md  pipeline_flow.md  preflight_json_schemas.md  research_apis_guide.md
input/: sample1.txt  test.txt
public/: index.html  manifest.json
src/: App.js  __init__.py  config_loader.py  content_assessor.py  council_orchestrator.py  input_reader.py  main.py  output_formatter.py  pipeline_input.py  prompt_texts.py  reasoning_agent.py  reasoning_agent_self_critique.py  reasoning_tree.py  scientific_review_formatter.py
tests/: conftest.py  smoke_ingestion_test.py  test_agno_integration.py  test_agno_reference_service.py  test_config_loader.py  test_council_orchestrator.py  test_end_to_end.py  test_input_reader.py  test_main.py  test_output_formatter.py  test_pipeline_input.py  test_readiness_suite.py  test_reasoning_agent.py  test_reasoning_agent_self_critique_utils.py  test_reasoning_tree.py  test_run_critique.py  (+1 more)
(+216 files in other folders)
